# xformers

./: .buildinfo  .coveragerc  .editorconfig  .flake8  .gitignore  .gitmodules  .isort.cfg  .markdownlint.json  .pre-commit-config.yaml  .pyre_configuration  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.rocm  HOWTO.md  LICENSE  MANIFEST.in  README.md  codecov.yml  environment_conda.yaml  genindex.html  index.html  mps_test_result.txt  objects.inv  py-modindex.html  pyproject.toml  requirements-benchmark.txt  requirements-lra.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_metal_support.py  test_mps_minimal.py  test_mps_simple.py  test_mps_support.py  version.txt  (+2 more)
xformers/csrc/attention/hip_fmha/: CMakeLists.txt  GENERATE_INSTANCES.md  attention_backward_generic.cpp  attention_backward_generic.cu  attention_backward_generic_ck_tiled.cpp  attention_ck_rand_uniform.cpp  attention_decoder_splitk.cpp  attention_forward_decoder.cpp  attention_forward_generic.cpp  attention_forward_generic.cu  attention_forward_generic_ck_tiled.cpp  attention_forward_splitk.cpp  ck_align_switch.h  ck_attention_forward_decoder.h  ck_attention_forward_decoder_splitk.h  ck_bool_switch.h  ck_fmha_backward_gemm_constants.h  ck_fmha_batched_backward.h  ck_fmha_batched_backward_bp16.cpp  ck_fmha_batched_backward_bp16_masktype_0.cpp  ck_fmha_batched_backward_bp16_masktype_0_no_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_0_with_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_1.cpp  ck_fmha_batched_backward_bp16_masktype_1_no_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_1_with_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_2.cpp  ck_fmha_batched_backward_bp16_masktype_2_no_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_2_with_attnbias.cpp  ck_fmha_batched_backward_fp16.cpp  ck_fmha_batched_backward_fp16_masktype_0.cpp  ck_fmha_batched_backward_fp16_masktype_0_no_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_0_with_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_1.cpp  ck_fmha_batched_backward_fp16_masktype_1_no_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_1_with_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_2.cpp  ck_fmha_batched_backward_fp16_masktype_2_no_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_2_with_attnbias.cpp  ck_fmha_batched_forward.h  ck_fmha_batched_forward_bp16.cpp  (+171 more)
xformers/csrc/attention/hip_fmha/instances/: ck_fmha_batched_backward_bp16_masktype_0_no_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_0_no_attnbias.cu  ck_fmha_batched_backward_bp16_masktype_0_no_attnbias.hip  ck_fmha_batched_backward_bp16_masktype_0_no_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_bp16_masktype_0_with_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_0_with_attnbias.hip  ck_fmha_batched_backward_bp16_masktype_0_with_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_bp16_masktype_1_no_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_1_no_attnbias.hip  ck_fmha_batched_backward_bp16_masktype_1_no_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_bp16_masktype_1_with_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_1_with_attnbias.hip  ck_fmha_batched_backward_bp16_masktype_1_with_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_bp16_masktype_2_no_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_2_no_attnbias.hip  ck_fmha_batched_backward_bp16_masktype_2_no_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_bp16_masktype_2_with_attnbias.cpp  ck_fmha_batched_backward_bp16_masktype_2_with_attnbias.cu  ck_fmha_batched_backward_bp16_masktype_2_with_attnbias.hip  ck_fmha_batched_backward_bp16_masktype_2_with_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_fp16_masktype_0_no_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_0_no_attnbias.hip  ck_fmha_batched_backward_fp16_masktype_0_no_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_fp16_masktype_0_with_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_0_with_attnbias.hip  ck_fmha_batched_backward_fp16_masktype_0_with_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_fp16_masktype_1_no_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_1_no_attnbias.hip  ck_fmha_batched_backward_fp16_masktype_1_no_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_fp16_masktype_1_with_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_1_with_attnbias.cu  ck_fmha_batched_backward_fp16_masktype_1_with_attnbias.hip  ck_fmha_batched_backward_fp16_masktype_1_with_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_fp16_masktype_2_no_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_2_no_attnbias.hip  ck_fmha_batched_backward_fp16_masktype_2_no_attnbias_fp32_grad.cpp  ck_fmha_batched_backward_fp16_masktype_2_with_attnbias.cpp  ck_fmha_batched_backward_fp16_masktype_2_with_attnbias.cu  ck_fmha_batched_backward_fp16_masktype_2_with_attnbias.hip  ck_fmha_batched_backward_fp16_masktype_2_with_attnbias_fp32_grad.cpp  (+2285 more)
xformers/csrc/attention/hip_fmha/instances_tiled/: ck_tiled_fmha_batched_forward_bp16_no_causalmask_no_attnbias_headdim_128.cpp  ck_tiled_fmha_batched_forward_bp16_no_causalmask_no_attnbias_headdim_256.cpp  ck_tiled_fmha_batched_forward_bp16_no_causalmask_no_attnbias_headdim_32.cpp  ck_tiled_fmha_batched_forward_bp16_no_causalmask_no_attnbias_headdim_64.cpp  ck_tiled_fmha_batched_forward_bp16_no_causalmask_with_attnbias_headdim_128.cpp  ck_tiled_fmha_batched_forward_bp16_no_causalmask_with_attnbias_headdim_256.cpp  ck_tiled_fmha_batched_forward_bp16_no_causalmask_with_attnbias_headdim_32.cpp  ck_tiled_fmha_batched_forward_bp16_no_causalmask_with_attnbias_headdim_64.cpp  ck_tiled_fmha_batched_forward_bp16_with_causalmask_no_attnbias_headdim_128.cpp  ck_tiled_fmha_batched_forward_bp16_with_causalmask_no_attnbias_headdim_256.cpp  ck_tiled_fmha_batched_forward_bp16_with_causalmask_no_attnbias_headdim_32.cpp  ck_tiled_fmha_batched_forward_bp16_with_causalmask_no_attnbias_headdim_64.cpp  ck_tiled_fmha_batched_forward_bp16_with_causalmask_with_attnbias_headdim_128.cpp  ck_tiled_fmha_batched_infer_bp16_masktype_0_no_attnbias.cpp  (+160 more)
(+989 files in other folders)
